--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
-/*Adjusting every box to the hole body of the page*/
+/* Adjusting every box to the hole body of the page */
 
 .main__container{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 /* Adjusting navigation bar to the top */
@@ -23,10 +23,7 @@
   
 }
 
-/* Adjusting changes to navigation bar */
-
-
-.navegation--list{
+/* Adjusting changes to navigation bar */.navegation--list{
   list-style-type: none;
   padding: 0;
   margin: 0;
@@ -41,9 +38,9 @@
 /* Adjusting mapping for icons */
 
 .container__icons{
-    width: 50%;
-    display: flex;
-    justify-content: space-evenly;
+  width: 50%;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 /* Sizing the icons to be adjusted to lading page */
@@ -53,9 +50,7 @@
   width: 19.99px;
   border-radius: 0px;
 }
-
-/*Media queries for responsive design*/
-
+/* Media queries for responsive design */
 /* Phone */
 @media (max-width: 650px){
   body{
@@ -67,21 +62,21 @@
     /*Navigation buton*/
 
     .navegation--list{
-        display: none;
+      display: none;
     }
 
     .container--nav{
-        display: flex;
-        justify-content: flex-end;
-        align-items: flex-end;
+      display: flex;
+      justify-content: flex-end;
+      align-items: flex-end;
     }
 
     .menu--image{
-        width: auto;
-        height: auto;
-        display: flex;
-        flex-direction: column-reverse;
-        align-self: center;
+      width: auto;
+      height: auto;
+      display: flex;
+      flex-direction: column-reverse;
+      align-self: center;
     }
 
     /*Main information*/
@@ -127,25 +122,25 @@
     /*Navigation*/
 
     .container--nav{
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: flex-end;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: flex-end;
     }
 
     .navegation--list{
-        width: 50%;
-        display: flex;
-        justify-content: space-evenly;
+      width: 50%;
+      display: flex;
+      justify-content: space-evenly;
     }
 
     .navigation--option{
-        font-family: 'Inter';
-        color: #172B4D;
+      font-family: 'Inter';
+      color: #172B4D;
     }
 
     .menu--image{
-        display: none;
+      display: none;
     }
 
     /* Main text */
@@ -186,5 +181,11 @@
         /* Color */
       color: #172B4D;
     }
+  }
+
+  /*Transitions*/
+
+  .brand--icon:hover{
+    box-shadow: 0px 8px 16px rgba(54, 179, 127, 0.24)
   }
   
