--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,6 @@
 
 @media (max-width: 650px) {
   body {
-
     background-image: url('images/mobile_background.png');
     background-size: cover;
     background-repeat: no-repeat;
@@ -86,22 +85,22 @@
     align-self: center;
   }
 
-    /* Main information */
+  /* Main information */
 
   #titlePortfolio,
     #developerPortfolio {
-    font-family: 'Inter', sans-serif;
-    font-style: normal;
-    font-weight: 700px;
-    font-size: 40px;
-    line-height: 52px;
-    text-align: center;
+      font-family: 'Inter', sans-serif;
+      font-style: normal;
+      font-weight: 700px;
+      font-size: 40px;
+      line-height: 52px;
+      text-align: center;
  }
 
   #titlePortfolio,
     #descriptionPortfolio {
-    /* Color */
-    color: #172b4d;
+      /* Color */
+      color: #172b4d;
   }
 
   #developerPortfolio {
@@ -110,7 +109,6 @@
   }
 
   #descriptionPortfolio {
-
     font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 400px;
@@ -122,81 +120,81 @@
 
   /* Desktop / Laptop */
   @media (min-width: 651px) {
-    body {
-      background-image: url('images/desktop_background.png');
-      background-size: cover;
+  body {
+    background-image: url('images/desktop_background.png');
+    background-size: cover;
       background-repeat: no-repeat;
-    }
-
-    /* Navigation */
+      }
     
-    .container--nav {
+  /* Navigation */
+
+  .container--nav {
       width: 100%;
-      display: flex;
+    display: flex;
       justify-content: center;
       align-items: flex-end;
-    }
-
-    .navegation--list {
+      }
+      
+  .navegation--list {
       width: 50%;
-      display: flex;
+    display: flex;
       justify-content: space-evenly;
-    }
-
-    .navigation--option {
+      }
+    
+  .navigation--option {
       font-family: 'Inter', sans-serif;
-      color: #172b4d;
-    }
-
-    .menu--image {
+    color: #172b4d;
+      }
+    
+  .menu--image {
       display: none;
-    }
-
+      }
+    
     /* Main text */
 
-    #titlePortfolio,
-      #developerPortfolio {
-      width: 920px;
-      font-family: 'Inter', sans-serif;
-      font-style: normal;
-      font-weight: 800px;
-      font-size: 48px;
-      line-height: 60px;
-      text-align: center;
-      letter-spacing: 0.37px;
-    }
-
-    #titlePortfolio {
-        /* Color */
-      color: #172b4d;
-    }
-
+  #titlePortfolio,
     #developerPortfolio {
-        /* Color */
-      color: #36b37e;
-    }
-
-    #descriptionPortfolio {
       width: 920px;
-      height: 96px;
-      font-family: 'Inter', sans-serif;
-      font-style: normal;
-      font-weight: 400px;
-      font-size: 20px;
-      line-height: 32px;
-      text-align: center;
-      color: #172b4d;
-    }
-
-    #titlePortfolio,
-      #descriptionPortfolio {
+        font-family: 'Inter', sans-serif;
+        font-style: normal;
+        font-weight: 800px;
+        font-size: 48px;
+        line-height: 60px;
+        text-align: center;
+        letter-spacing: 0.37px;
+        }
+      
+  #titlePortfolio {
         /* Color */
-      color: #172b4d;
-    }
+    color: #172b4d;
+      }
+      
+  #developerPortfolio {
+        /* Color */
+    color: #36b37e;
+     }
+      
+  #descriptionPortfolio {
+     width: 920px;
+     height: 96px;
+        font-family: 'Inter', sans-serif;
+        font-style: normal;
+        font-weight: 400px;
+        font-size: 20px;
+        line-height: 32px;
+        text-align: center;
+        color: #172b4d;
+      }
+      
+  #titlePortfolio,
+    #descriptionPortfolio {
+        /* Color */
+    color: #172b4d;
+      }
 }
-
+  
   /* Transitions */
-
-  .brand--icon:hover {
-     box-shadow: 0px 8px 16px rgba(54, 179, 127, 0.24)
+  
+    .brand--icon:hover {
+      box-shadow: 0 8px 16px rgba(54, 179, 127);
 }
